--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/tailwindcss": "^6.12.2",
     "lucide-vue-next": "^0.468.0",
     "nuxt": "^3.14.1592",
+    "nuxt-icon": "^1.0.0-beta.7",
     "vue": "latest",
     "vue-router": "latest"
   }
