t9: railway backend build configuration

--- a/railway.toml
+++ b/railway.toml
@@ -11,5 +11,6 @@ watchPatterns = ["/frontend/**"]
 
 [build.backend]
 builder = "dockerfile"
-dockerfilePath = "backend/auth/Dockerfile"
+dockerfile = "backend/auth/Dockerfile"
+context = "backend/auth"
 watchPatterns = ["/backend/**"]
