t9: railway backend build configuration

--- a/railway.toml
+++ b/railway.toml
@@ -1,4 +1,3 @@
 [build]
-[build.frontend]
-builder = "nixpacks"
-watchPatterns = ["/frontend/**"]
+builder = "dockerfile"
+dockerfilePath = "frontend/Dockerfile"
