t9: railway backend build configuration

--- a/railway.toml
+++ b/railway.toml
@@ -1,3 +1,4 @@
 [build]
-builder = "dockerfile"
-dockerfilePath = "frontend/Dockerfile"
+[build.frontend]
+builder = "nixpacks"
+watchPatterns = ["/frontend/**"]
