--- a/backend/auth/Dockerfile
+++ b/backend/auth/Dockerfile
@@ -1,8 +1,10 @@
-FROM golang:1.23.4-alpine
+FROM golang:1.21-alpine
 
 WORKDIR /app
 
-COPY go.mod ./
+COPY go.mod go.sum ./
+RUN go mod download
+
 COPY . .
 
 RUN go build -o main cmd/app/main.go
