--- a/backend/api/Dockerfile
+++ b/backend/api/Dockerfile
@@ -2,7 +2,7 @@ FROM golang:1.23.4-alpine
 
 WORKDIR /app
 COPY . .
-RUN go build -o auth cmd/app/main.go
+RUN go build -o api cmd/app/main.go
 
 EXPOSE 8080
-CMD ["./auth"]
+CMD ["./api"]
