--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "@vee-validate/rules": "^4.15.0",
     "lucide-vue-next": "^0.468.0",
     "nuxt": "^3.14.1592",
     "nuxt-icon": "^1.0.0-beta.7",
+    "vee-validate": "^4.15.0",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "yup": "^1.6.1"
   }
 }
